--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,6 +7,9 @@ version: 2
 
 build:
   os: ubuntu-22.04
+  tools:
+    python: "3.12"
+    nodejs: "18"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
