--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,7 +8,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: "3.7"
     nodejs: "18"
 
 # Build documentation in the docs/ directory with Sphinx
@@ -22,6 +22,7 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF
 formats:
   - pdf
+  - epub
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
