--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,11 +5,15 @@
 # Required
 version: 2
 
+# Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: "3"
-    nodejs: "18"
+    python: "3.12"
+    # You can also specify other tool versions:
+    # nodejs: "20"
+    # rust: "1.70"
+    # golang: "1.20"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -26,6 +30,5 @@ formats:
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3
   install:
     - requirements: source/requirements.txt
