--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -26,7 +26,7 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF
 formats:
   - pdf
-  - epub
+  # - epub
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
