--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Build directory
+build/
+
+# Python virtual environment
+venv/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 source/关于本指南/.DS_Store
 source/.DS_Store
